# solana-moon-scanner

./: .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  STRUCTURE.txt  WEB_APP_INFO.md  config.example.env  demo_scan.py  demo_scan_bonk.py  deploy.sh  docker-compose.yml  prometheus.yml  pyproject.toml  railway.json  requirements.txt  sample_output.json  start.sh
scripts/: export_top_tokens.py  test_setup.sh
src/: __init__.py  cli.py  scanner.py
src/alerts/: __init__.py  discord_bot.py  telegram_bot.py  webhook_sender.py
src/core/: __init__.py  dex_monitor.py  rpc_client.py  websocket_manager.py
src/scoring/: __init__.py  metrics_fetcher.py  moon_score.py  validators.py
src/utils/: __init__.py  config.py  logger.py  metrics.py
tests/: __init__.py  test_scoring.py  test_validators.py
webapp/: auto_scanner.py  main.py
webapp/static/css/: custom.css
webapp/templates/: base.html  dashboard.html  history.html  scan.html  settings.html
